--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,10 +1,11 @@
 .wrapper {
   text-align: center;
-}
-
-.header {
   background-color: #282c34;
   min-height: 100vh;
+}
+
+.header, .main, .footer {
+  /* background-color: #282c34; */
   display: flex;
   flex-direction: column;
   align-items: center;
