--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,108 @@
 .wrapper {
   text-align: center;
-  background-color: #282c34;
+  /* background-color: #282c34; */
+  background-color: #fff;
   min-height: 100vh;
 }
-
-.header, .main, .footer {
+.hero {
+  background: url("/public/images/img/backround.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  max-height: 613px;
+}
+.main,
+.footer {
   /* background-color: #282c34; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: white; */
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+.header .icon img {
+  width: 100%;
+  height: 100%;
+  max-width: 28px;
+  max-height: 32px;
+}
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.tabbed-grid-container {
+  width: 100%;
+  /* Adjust width as needed */
+}
+
+.tabs {
+  display: flex;
+  border-bottom: 1px solid #ccc;
+}
+
+.tabs button {
+  padding: 10px 15px;
+  border: none;
+  background-color: #f0f0f0;
+  cursor: pointer;
+  font-size: 1rem;
+  outline: none;
+}
+
+.tabs button.active {
+  background-color: #fff;
+  border-bottom: 2px solid blue; /* Style for the active tab */
+}
+
+.tab-content {
+  padding: 15px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Creates 3 equal columns */
+  gap: 15px; /* Spacing between grid items */
+}
+
+.grid-item {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ddd;
+  padding: 15px;
+  text-decoration: none;
+  color: #333;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  position: relative; /* Needed for absolute positioning of the icon */
+  transition: background-color 0.2s ease-in-out; /* Smooth hover transition */
+}
+
+.grid-item:hover {
+  background-color: #f7f7f7; /* Very light grey on hover */
+}
+
+.grid-item h3 {
+  margin-top: 0;
+  margin-bottom: 5px;
+  font-size: 1.2rem;
+}
+
+.grid-item p {
+  margin-bottom: 0;
+  font-size: 0.9rem;
+  color: #666;
+}
+
+.link-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #999; /* Adjust icon color as needed */
 }
